2013-07-03 Paolo Mantegazza <mantegazza@aero.polimi.it>

        * base/sched/liblxrt/init.c: used nomore, just an empty code.
        * base/sched/liblxrt/services.c: include RTAI services to be libbed 
	  from the LXRT user space part of header files directly and not 
	  through the inclusion of rtai_schedcore.h.

2013-07-02 Paolo Mantegazza <mantegazza@aero.polimi.it>

        * base/include/rtai_lxrt.h: remove unused rt_clone and lower 
	  RT_THREAD_STACK_MIN.

2013-06-09 Paolo Mantegazza <mantegazza@aero.polimi.it>

        * addons/rtdm/xn.h and base/ipc/shm/kvmem.c: define VM_RESERVED if it
	  does not exist.
        * base/arch/x86/calibration/smi-module.c: discard __devinit in function
	  definitions, found no more in Linux.
        * base/include/rtai_schedcore.h: add e new Linux version dependenc for 
	  OOM_DISABLE.
        * base/sched/sys.c:just a first fix to have it compile against the
	  gone for ever Linux kernel_thread, to be fixed, it is just for 
	  having it compile at the moment.

2013-03-14 Paolo Mantegazza <mantegazza@aero.polimi.it>

        * base/arch/x86/hal/hal_32.c: use CPU_MASK_ALL to fix a quick and
	  dirty, but very very bad hack, in selecting Linux timers for RTAI.

2013-02-28 John Morris <john@zultron.com>

	* base/sched/sched.c: changed set_cpu_allowed to set_cpu_allowed_ptr and 
	  to cpumask_of_cpu to cpumask_of, to allow compilation against kernels 
	  that have CONFIG_CPUMASK_OFFSTACK=y

2013-02-28 Shahbaz Youssefi <ShabbyX@gmail.com>

	* base/include/rtai_rwl.h: fixed a missing nam2num in rt_named_rwl_init.
	* base/include/rtai_spl.h: fixed a missing nam2num in rt_named_spl_init.

2013-02-28 Sebastian Kuzminsky <seb@highlab.com\> 

	* base/arch/x86/patches/hal-linux-3.5.7-x86-3.patch: fix to help
	  DEBIAN packaging.

2013-02-28 Paolo Mantegazza <mantegazza@aero.polimi.it> 
	   Pierangelo Masarati <masarati@aero.polimi.it>

	* Completed the initial tructuring for a unified X86 arch, making